syntax = "proto3";

package user;
option go_package = "user/proto";

message CreateRequest {
    string name = 1;
    string gender = 2;
    int32 birthYear = 3;
    string avatar = 4;
}

message UpdateRequest {
    int32 userId = 1;
    string name = 2;
    string gender = 3;
    int32 birthYear = 4;
    string avatar = 5;
}

message DeleteRequest {
    int32 userId = 1;
}

message GetRequest {
    int32 userId = 1;
}

message VerifyRequest {
    int32 userId = 1;
}

message CreateResponse {
    bool success = 1;
    int32 userId = 2;
}

message UpdateResponse {
    bool success = 1;
}

message DeleteResponse {
    bool success = 1;
}

message UserInfo {
    string name = 1;
    string gender = 2;
    int32 birthYear = 3;
    string avatar = 4;
}

message GetResponse {
    bool success = 1;
    UserInfo info = 2;
}

message VerifyResponse {
    bool success = 1;
}

service UserService {
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Update(UpdateRequest) returns (UpdateResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc Get(GetRequest) returns (GetResponse) {};
    rpc Verify(VerifyRequest) returns (VerifyResponse) {};
}
